--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -3,7 +3,13 @@
 <div class="publication" data-pub='{{ pub | jsonify | escape }}'>
   <h3 id="{{ anchor }}">{% for award in pub.awards %}<i class="fas fa-{% if award == "Best Paper Award" %}trophy{% else %}award{% endif %} award-icon" title="{{ award }}"></i> {% endfor %}{{ pub.title }}</h3>
   <div class="authors">
-    {% for author in pub.authors %}{% include person person=author %}{% unless forloop.last %}, {% endunless %}
+    {% for author in pub.authors %}
+      {% if author == "Sam Wong" %}
+        <strong>{{ author }}</strong>
+      {% else %}
+        {{ author }}
+      {% endif %}
+      {% unless forloop.last %}, {% endunless %}
     {% endfor %}
   </div>
   {% if pub.venue %}
