--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,6 @@
     <div class="footer-col">
       This template is based on <a href="https://github.com/domoritz/domoritz.github.io">Dominik Moritz's website</a>.
     </div>
-    <div class="footer-col site-desc">{{ site.description }} I'm <a href="https://twitter.com/domoritz">@domoritz</a> on Twitter, <a rel="me" href="https://vis.social/@dom">@dom@vis.social</a> on the Fediverse, and <a href="https://bsky.app/profile/domoritz.de">@domoritz.de</a> on Bluesky.</div>
+    <div class="footer-col site-desc">{{ site.description }}</div>
   </div>
 </footer>
