--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}aria-current="page"{% endif %}>Publications</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}aria-current="page"{% endif %}>Talks</a>
     <a href="{{ '/blog/' | relative_url }}" {% if current[1] == 'blog' %}aria-current="page"{% endif %}>Blog</a>
-    <a href="{{ '/cv/' | relative_url }}" {% if current[1] == 'cv' %}aria-current="page"{% endif %}>CV</a>
+    <!-- <a href="{{ '/cv/' | relative_url }}" {% if current[1] == 'cv' %}aria-current="page"{% endif %}>CV</a> -->
+    <a href="https://docs.google.com/document/d/1-isyXIbIYdkAbXpjAtFqDBIJGTswV75oZ_GFzHkoXr8/edit?usp=sharing" target="_blank" rel="noopener">CV</a>
 
     <span class="external">
       <a href="https://bsky.app/profile/domoritz.de"><i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bsky</a>
