--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,14 +5,14 @@
 
     <a href="{{ '/projects/' | relative_url }}" {% if current[1] == 'projects' %}aria-current="page" {% endif %}>Projects</a>
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}aria-current="page"{% endif %}>Publications</a>
-    <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}aria-current="page"{% endif %}>Talks</a>
-    <a href="{{ '/blog/' | relative_url }}" {% if current[1] == 'blog' %}aria-current="page"{% endif %}>Blog</a>
+    <!-- <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}aria-current="page"{% endif %}>Talks</a> -->
+    <!-- <a href="{{ '/blog/' | relative_url }}" {% if current[1] == 'blog' %}aria-current="page"{% endif %}>Blog</a> -->
     <!-- <a href="{{ '/cv/' | relative_url }}" {% if current[1] == 'cv' %}aria-current="page"{% endif %}>CV</a> -->
     <a href="https://docs.google.com/document/d/1-isyXIbIYdkAbXpjAtFqDBIJGTswV75oZ_GFzHkoXr8/edit?usp=sharing" target="_blank" rel="noopener">CV</a>
 
-    <span class="external">
+    <!-- <span class="external">
       <a href="https://bsky.app/profile/domoritz.de"><i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bsky</a>
       <a href="mailto:domoritz@cmu.edu"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Email</a>
-    </span>
+    </span> -->
   </nav>
 </header>
