--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,10 @@
     <!-- <a href="{{ '/cv/' | relative_url }}" {% if current[1] == 'cv' %}aria-current="page"{% endif %}>CV</a> -->
     <a href="https://docs.google.com/document/d/1-isyXIbIYdkAbXpjAtFqDBIJGTswV75oZ_GFzHkoXr8/edit?usp=sharing" target="_blank" rel="noopener">CV</a>
 
-    <!-- <span class="external">
-      <a href="https://bsky.app/profile/domoritz.de"><i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bsky</a>
+   <span class="external">
+      <!--<a href="https://bsky.app/profile/domoritz.de"><i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bsky</a>
       <a href="mailto:domoritz@cmu.edu"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Email</a>
-    </span> -->
+   -->
+    </span>
   </nav>
 </header>
